--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -6,10 +6,15 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^18.16.3",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "@types/websocket": "^1.0.5",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "typescript": "4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.39.0",
     "eslint-config-react-app": "^7.0.1",
     "jest-editor-support": "^31.0.1"
   }
