--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -10,10 +10,16 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "@types/websocket": "^1.0.5",
+    "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.11.0",
+    "react-scripts": "^5.0.1",
+    "sort-by": "^0.0.2",
     "typescript": "4.9.5",
     "web-vitals": "^2.1.4"
   },
