--- a/webapi/appsettings.Development.json
+++ b/webapi/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\SQLExpress;Initial Catalog=DepotHunters_Design;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
