--- a/webapi/appsettings.Development.json
+++ b/webapi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\SQLExpress;Initial Catalog=DepotHunters_Design;Integrated Security=True"
+    "DefaultConnection": "Data Source=.\\SQLExpress;Initial Catalog=DepotHunters;Integrated Security=True;TrustServerCertificate=Yes"
   },
   "Logging": {
     "LogLevel": {
